[package]
name = "serve"
version = "0.1.1"
edition = "2024"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.28.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs"] }
clap = { version = "4.5.32", features = ["derive"] }
tower-livereload = "0.10"
notify = "8"
notify-debouncer-mini = "0.7"
