[package]
name = "serve"
version = "0.2.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "compression-gzip", "compression-br", "set-header"] }
clap = { version = "4", features = ["derive"] }
tower-livereload = "0.10"
notify = "8"
notify-debouncer-mini = "0.7"
http = "1"
